public class Beer extends Alcohol {

    public Beer(String name, String types, int price, String notes, String country) {
        super(name, types, price, notes, country);
    }
}
