public interface IAlcohol {
    String getName();
    String getTypes();
    int getPrice();
    String getNotes();
    String getCountry();
}
