public class Main {

    public static void main(String[] args) {


        // Beer beer = new Beer(23, "Honey", "Pilsner");


        System.out.println(beer);

    }
}
