public class Spirit extends Alcohol {

    public Spirit(String name, String types, int price, String notes, String country) {
        super(name, types, price, notes, country);
    }
}
