public class Wine extends Alcohol {

    public Wine(String name, String types, int price, String notes, String country) {
        super(name, types, price, notes, country);
    }

}
